zcheck (head builder tool to check balancing)
mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj is loaded)
Auto Toggles (loot, goold, split, sac, assist, map)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)t
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)

[Dec 04 2008] - Fizban
  DG Scripts are now attachable to players (cedit toggle defaults this behavior to off).
[Dec 01 2008] - Fizban
  Now compiles warning free on GCC 4.3.2
[Nov 23 2008] - Rumble
  Fixed a memory leak in quest.c create_obj. (thanks Jamdog)
[Oct 21 2008] - Rumble
  Fixed display of wear locations and a typo. (thanks Kyle)
[Oct 09 2008] - Rumble
  Fixed a small bug in hedit. If CIRCLE_UNSIGNED_INDEX is 0, then new entries wo
n't save correctly. (thanks Rhade)
  Code cleanup of check_idling. (thanks Rhade)
[Sep 01 2008] - Fizban
  Added a check to mzoneecho to stop mortals from using it.
[Aug 31 2008] - Fizban
  Removed various mid-function defines of variables.
[Oct 09 2008] - Rumble
  Fixed a small bug in hedit. If CIRCLE_UNSIGNED_INDEX is 0, then new entries won't save correctly. (thanks Rhade)
  Code cleanup of check_idling. (thanks Rhade)
[Aug 27 2008] - Rumble
  Fixed Mob using '((c)->player_specials->saved.pref)' at dg_variables.c:860
tbaMUD-3.57
[Aug 11 2008] - Rumble
  Updated World and files for 3.57 release. 
[Aug 10 2008] - Fizban
  Added sanity checks to zedit new. (Can no longer make zones that include negative vnums, also get the proper message when you have 3 of the 4 arguments.)
  You can now put objects in and remove objects from closed containers as an imm with nohassle.
  You can now walk through closed doors as an imm with nohassle on.
  You can now open locked containers and doors without unlocking them as an immortal with nohassle.
  You can now examine the contents of closed containers as an imm with nohassle.